# fit-framework

./: .gitignore  .mailmap  AGENTS.en.md  AGENTS.md  CONTRIBUTING.md  GEMINI.en.md  GEMINI.md  README.md  build.sh  pom.xml
.agents/: QUICKSTART.md  README.md
framework/fit/python/: .gitignore  README.md  pyproject.toml
framework/fit/python/conf/: application.yml  fit.yml
framework/fit/python/fit_cli/: main.py  readme.md
framework/fit/python/fit_cli/commands/: build_cmd.py  init_cmd.py  package_cmd.py
framework/fit/python/fit_cli/utils/: build.py
framework/fit/python/fit_common_struct/: entity.py
framework/fit/python/fitframework/: __init__.py  const.py
framework/fit/python/fitframework/utils/: process_monitor.py  restart_policy.py
framework/fit/python/plugin/fit_py_health_monitor/: health_monitor.py
framework/fit/python/plugin/fit_py_health_monitor/conf/: application.yml  plugin.yml
framework/fit/python/plugin/fit_py_heart_beat_agent/: heart_beat_agent.py
framework/fit/python/plugin/fit_py_nacos_registry/: entity.py
framework/fit/python/plugin/fit_py_nacos_registry/conf/: application.yml
framework/fit/python/plugin/fit_py_nacos_registry/heartbeat/: heartbeat_service.py
framework/fit/python/plugin/fit_py_nacos_registry/service/: async_executor.py  constants.py  nacos_registry_server.py  parsers.py  utils.py
framework/fit/python/plugin/fit_py_registry_client/: fitable_address_service.py  fitable_meta_service.py  online_fitable_service.py  registry_address_service.py
framework/fit/python/plugin/fit_py_registry_client/conf/: application.yml
(+715 files in other folders)
